--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "a",
+  "name": "picasso",
   "version": "0.0.1",
-  "private": true,
+  "private": false,
   "scripts": {
     "start": "node ./bin/www"
   },
