--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.2.0",
-    "static-favicon": "~1.0.0",
-    "morgan": "~1.0.0",
-    "cookie-parser": "~1.0.1",
     "body-parser": "~1.0.0",
+    "bower": "^1.3.12",
+    "cookie-parser": "~1.0.1",
     "debug": "~0.7.4",
+    "express": "~4.2.0",
     "jade": "~1.3.0",
-    "nodemon": "^1.2.1"
+    "mocha": "^2.0.1",
+    "morgan": "~1.0.0",
+    "nodemon": "^1.2.1",
+    "should": "^4.3.0",
+    "static-favicon": "~1.0.0",
+    "supertest": "^0.15.0"
   }
 }
