--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mocha": "^2.0.1",
     "morgan": "~1.0.0",
     "nodemon": "^1.2.1",
+    "request": "^2.49.0",
     "should": "^4.3.0",
     "static-favicon": "~1.0.0",
     "supertest": "^0.15.0"
